fix: change swagger params
