# storage/api-docs/api-docs.json
@@ -52,6 +52,12 @@
                 "operationId": "bd962e3ca0e1a519aa5b180da9b7bbf9",
                 "parameters": [
                     {
+                        "name": "api_key",
+                        "in": "header",
+                        "description": "Ваш api token",
+                        "required": true
+                    },
+                    {
                         "name": "status",
                         "in": "path",
                         "description": "Статус заявки Resolved|Active"
@@ -117,6 +123,20 @@
                 ],
                 "summary": "Добавление ответа к заявке (Нужен токен)",
                 "operationId": "7024a967cac2a312857e8138848d2d5e",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Id заявки",
+                        "example": 1
+                    },
+                    {
+                        "name": "api_key",
+                        "in": "header",
+                        "description": "Ваш api token",
+                        "required": true
+                    }
+                ],
                 "requestBody": {
                     "required": true,
                     "content": {
